# nrf52-cmake-blinky

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  sdk_config.h
